# key-val-stash

./: .gitignore  Cargo.toml  Containerfile  LICENSE  Makefile
python/: message.py  server.py  udp_client.py
src/: database.rs  main.rs  message.rs
